Inital add of Save as PDF. Not working.

--- a/js/html/bodyIndex.html
+++ b/js/html/bodyIndex.html
@@ -80,6 +80,7 @@
 			<ul class="nav collapse collapse-save-as">
 				<li><a class="action-download-md" href="#">Save as Markdown</a></li>
 				<li><a class="action-download-html" href="#">Save as HTML</a></li>
+				<li><a class="action-download-pdf" href="#">Save as PDF</a></li>
 				<li><a class="action-download-template" href="#">Save using
 						template</a></li>
 			</ul>
