--- a/js/html/bodyViewer.html
+++ b/js/html/bodyViewer.html
@@ -19,6 +19,8 @@
 							class="icon-download-alt"></i> Save as Markdown</a></li>
 					<li><a class="action-download-html" href="#"><i
 							class="icon-download-alt"></i> Save as HTML</a></li>
+					<li><a class="action-download-pdf" href="#"><i
+							class="icon-download-alt"></i> Save as PDF</a></li>
 					<li><a class="action-download-template" href="#"><i
 							class="icon-download-alt"></i> Save using template</a></li>
 				</ul>
